BUGFIX: White gap beside discard button

--- a/packages/neos-ui/src/Containers/RightSideBar/style.css
+++ b/packages/neos-ui/src/Containers/RightSideBar/style.css
@@ -5,7 +5,7 @@
     padding-bottom: 41px;
     right: unset;
     position: relative;
-    background-color: transparent;
+    background-color: var(--colors-ContrastDarkest);
 }
 .rightSideBar--isHidden {
     width: 0;
